--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 
   <html lang="en">
       <head>
+         <title>
 
+         </title>
+
+         <meta charset = "UTF-8">
       </head>
 
       <body>
           <h1>
               Odin Recipes
           </h1>
+          <p>
+              <a href="recipes/dosa.html">DOSA recipe</a>
+          </p>
       </body>
   </html>
