--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <html lang="en">
       <head>
          <title>
-
+             Food Recipes
          </title>
 
          <meta charset = "UTF-8">
@@ -11,10 +11,11 @@
 
       <body>
           <h1>
-              Odin Recipes
+              South Indian Food 
           </h1>
           <p>
               <a href="recipes/dosa.html">DOSA recipe</a>
+              <a href=""></a>
           </p>
       </body>
   </html>
