--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </h1>
           <p>
               <a href="recipes/dosa.html">DOSA recipe</a>
-              <a href=""></a>
+              <a href="recipes/upma.html">UPMA recipe</a>
           </p>
       </body>
   </html>
