--- a/recipes/dosa.html
+++ b/recipes/dosa.html
@@ -2,7 +2,7 @@
    <html lang="en">
        <head>
            <title>
-
+              DOSA RECIPE
            </title>
 
            <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 
        <body>
            <h1>DOSA</h1>
-             <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FDosa&psig=AOvVaw1e283U-vtwgiuO16kRBaSd&ust=1644763664981000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKCroKa0-vUCFQAAAAAdAAAAABAD" alt="DOSA">
+             <img src="../images/dosa.jpg" alt="DOSA">
            
                 <h2>Description</h2>
                      <p>Dosa is a <em>South-Indian</em>dish which is centuries old.It looks a circular piece of cloth and has a brown texture on it. It is crispy and usually eaten with a side dish like sambhar,podi etc</p>
